updates and fixes

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 		</p>
 		<br/>
 		<p>
-			The docs section is mostly for my personal use; however, you might find something useful there.
+			The doc section is mostly for my personal use; however, you might find something useful there.
 		</p>
 		<br/>
 		<blockquote>
@@ -37,9 +37,10 @@
 		<h2>Other Info:</h2>
 		<br/>
 		<ul>
-			<li>This is an ad and tracker free static website with no JavaScript.</li>
-			<li>Source can be found at- https://github.com/jethi/website</li>
-			<li>Source code of this website is licensed under the ISC license.</li>
+			<li>This is an ad and tracker free static website with no JavaScript</li>
+			<li>Initially deployed on 1 Nov 2020</li>
+			<li>Source can be found at- https://github.com/jethi/my-website</li>
+			<li>Source code of this website is licensed under the ISC license</li>
 		</ul>
 		<br/>
 
